# Coworking-Platform-Microservices

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
apps/frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
gateway/: nginx.conf
services/AuthService/: .dockerignore  .env.example  Dockerfile  README.md  main.py  requirements.txt  seed.py
services/Billing_Service/: .dockerignore  Dockerfile  main.js  package-lock.json  package.json
services/ReservationService/: .dockerignore  Cargo.toml  Dockerfile
services/ReservationService/src/: main.rs
services/ReservationService/src/controllers/: cola_controller.rs  health_controller.rs  mod.rs  reserva_controller.rs
services/ReservationService/src/db/: mod.rs
services/ReservationService/src/entities/: elemento_cola.rs  espacio_verificacion.rs  mod.rs  reserva.rs
services/ReservationService/src/errors/: mod.rs
services/ReservationService/src/messaging/: mod.rs
services/ReservationService/src/middleware/: auth.rs
services/ReservationService/src/repositories/: espacio_verificacion_repository.rs  mod.rs  reserva_repository.rs
services/ReservationService/src/routers/: mod.rs
services/ReservationService/src/schemas/: mod.rs  pagination.rs  reserva_schemas.rs
services/ReservationService/src/services/: cola_service.rs  mod.rs  reserva_service.rs
services/ReservationService/src/storage/: cola_prioridad.rs  mod.rs
services/ReservationService/src/traits/: mod.rs
services/SpaceService/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
(+86 files in other folders)
